- Atualizando o codigo fonte do _Layout.cshtml foi renomeado o menu da integração de Sistema para Procedimento Online, ajuste realizado em Dezembro/2015

--- a/Fontes/SitePortal/SitePortal/SitePortal/Views/Shared/_Layout.cshtml
+++ b/Fontes/SitePortal/SitePortal/SitePortal/Views/Shared/_Layout.cshtml
@@ -315,7 +315,7 @@
                         }
 
                         @if (!String.IsNullOrEmpty(Model.TedescoLogin)) { 
-                            <li><a href="#" onclick="javascript: $('#frmTedesco').submit();" target="_blank">Sistema</a></li>
+                            <li><a href="#" onclick="javascript: $('#frmTedesco').submit();" target="_blank">Procedimento Online</a></li>
                         }
                         
                     </ul>
