- Novas tabelas para configuração do Template de E-mail Administrativo. - Cadastro das novas funcionalidades para Pré-Cadastro WebFull - Nova opção no menu do cadastro de Usuário (Pré-Cadastro WebFull) - Nova opção no menu de Configurações (E-mail Administrativo) - Ajustado Enum com os códigos das novas funcionalidades - Ajustado formulário dos Níveis de Acesso para registrar as novas funcionalidades - Inserido no banco de dados os modelos de e-mails administrativos

--- a/Fontes/BackofficeCMS/BackofficeCMS/Views/Usuario/MinhaConta.cshtml
+++ b/Fontes/BackofficeCMS/BackofficeCMS/Views/Usuario/MinhaConta.cshtml
@@ -284,6 +284,8 @@
                                             <label><input type="checkbox" id="optFunc_290" name="optFunc_290"> Adicionar </label>
                                             <label><input type="checkbox" id="optFunc_300" name="optFunc_300"> Editar </label>
                                             <label><input type="checkbox" id="optFunc_310" name="optFunc_310"> Excluir </label>
+                                            <label><input type="checkbox" id="optFunc_295" name="optFunc_295"> Pré-Cadastro Tedesco WebFull </label>
+
                                         </div>
                                     </div>
                                 </div>
@@ -297,6 +299,17 @@
                                             <label><input type="checkbox" id="optFunc_330" name="optFunc_330"> Adicionar </label>
                                             <label><input type="checkbox" id="optFunc_340" name="optFunc_340"> Editar </label>
                                             <label><input type="checkbox" id="optFunc_350" name="optFunc_350"> Excluir </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div>
+                                        <label class="col-md-12 control-label" style="background-color: gray; color: white; border-radius: 4px !important;">Template de E-mail Administrativo</label>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="checkbox-list">
+                                            <label><input type="checkbox" id="optFunc_420" name="optFunc_420"> Listar </label>
+                                            <label><input type="checkbox" id="optFunc_430" name="optFunc_430"> Editar </label>
                                         </div>
                                     </div>
                                 </div>
