--- a/Fontes/BackofficeCMS/BackofficeCMS/Views/EmailTemplate/CadEmailTemplate.cshtml
+++ b/Fontes/BackofficeCMS/BackofficeCMS/Views/EmailTemplate/CadEmailTemplate.cshtml
@@ -5,8 +5,14 @@
 
 @section Scripts
 {
+    <script type="text/javascript" src="@Url.Content("~/")Scripts/Libs/jquery.ui.widget.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/")Scripts/Libs/jquery.fileupload.js"></script>
+
+    <script src="@Url.Content("~/")Scripts/BackofficeCMS/jArquivo.js" type="text/javascript"></script>
 
     <script src="@Url.Content("~/")Scripts/BackofficeCMS/jEmailTemplate.js" type="text/javascript"></script>
+
+    <script src="@Url.Content("~/")Scripts/BackofficeCMS/jMediaCenter.js" type="text/javascript"></script>
 
 }
 
@@ -78,7 +84,7 @@
                                         <label class="control-label">Comentário</label>
                                         <input type="text" id="Comentario" name="Comentario" class="form-control">
                                         <span class="help-block">
-
+                                            
                                         </span>
                                     </div>
                                 </div>
@@ -103,7 +109,12 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label class="control-label">Corpo</label>
-                                        <textarea id="Corpo" name="Corpo" rows="5" class="form-control" style="resize: none;"></textarea>
+                                        
+                                        @*<textarea id="Corpo" name="Corpo" rows="5" class="form-control" style="resize: none;"></textarea>*@
+
+                                        <input type="hidden" id="EmailTemplateCorpo" name="EmailTemplateCorpo" />
+                                        <textarea class="form-control" id="Corpo" name="Corpo" rows="6"></textarea>
+
                                         <span class="help-block">
 
                                         </span>
@@ -131,3 +142,7 @@
         @*</div>*@
     </div>
 </div>
+
+
+@{Html.RenderPartial("../Publicacao/CadArquivo", null);}
+@{Html.RenderPartial("../Publicacao/SelArquivo", null);}
