- Manutenção do cadastro de e-mail - Controle de Pre-Cadastro de usuários WebFull

--- a/Fontes/BackofficeCMS/BackofficeCMS/Views/Usuario/MinhaConta.cshtml
+++ b/Fontes/BackofficeCMS/BackofficeCMS/Views/Usuario/MinhaConta.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewBag.Title = "MinhaConta";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var Fluxo = ViewBag.Fluxo;
 }
 
 @section Scripts
@@ -26,6 +28,8 @@
             <form id="frmCadUsuario" action="#" class="horizontal-form">
 
                 <input type="hidden" id="UsuarioId" name="UsuarioId" value="@ViewBag.UsuarioId" />
+                <input type="hidden" id="Fluxo" name="Fluxo" value="@ViewBag.Fluxo" />
+
                 <div class="form-body tabbable tabbable-custom tabbable-noborder">
 
                     <!-- Abas -->
@@ -35,11 +39,13 @@
                                 Geral
                             </a>
                         </li>
+                        @if (Fluxo != 1) { 
                         <li>
                             <a href="#tabControleAcesso" data-toggle="tab">
                                 Nível de Acesso
                             </a>
                         </li>
+                        }
                         <li>
                             <a href="#tabExterno" data-toggle="tab">
                                 Externo
@@ -74,57 +80,62 @@
                             <!--/row-->
                             <!--/row-->
                             <!--/row-->
-                            <h3 class="form-section">Dados de Acesso</h3>
-                            <div class="row">
-                                <div class="col-md-6 ">
-                                    <div class="form-group">
-                                        <label>Login</label>
-                                        <input type="text" id="Login" name="Login" class="form-control">
-                                    </div>
-                                </div>
-                                <!--/span-->
-                                <div class="col-md-4 ">
-                                    <div class="form-group">
-                                        <label>Senha</label>
-                                        <input type="password" id="Password" name="Password" class="form-control" value="">
-                                    </div>
-                                </div>
 
-                            </div>
-                            <!--/row-->
-                            <div class="row">
+                            @if (Fluxo != 1) { 
+                                <h3 class="form-section">Dados de Acesso</h3>
+                                <div class="row">
+                                    <div class="col-md-6 ">
+                                        <div class="form-group">
+                                            <label>Login</label>
+                                            <input type="text" id="Login" name="Login" class="form-control">
+                                        </div>
+                                    </div>
+                                    <!--/span-->
+                                    <div class="col-md-4 ">
+                                        <div class="form-group">
+                                            <label>Senha</label>
+                                            <input type="password" id="Password" name="Password" class="form-control" value="">
+                                        </div>
+                                    </div>
 
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label class="control-label">Situação</label>
-                                        <div class="radio-list">
-                                            <label class="radio-inline">
-                                                <input type="radio" name="Ativo" id="Ativo" value="1"> Ativo
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="Ativo" id="Ativo" value="0"> Inativo
-                                            </label>
+                                </div>
+                                <!--/row-->
+                            
+                            
+                                <div class="row">
+
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label">Situação</label>
+                                            <div class="radio-list">
+                                                <label class="radio-inline">
+                                                    <input type="radio" name="Ativo" id="Ativo" value="1"> Ativo
+                                                </label>
+                                                <label class="radio-inline">
+                                                    <input type="radio" name="Ativo" id="Ativo" value="0"> Inativo
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--/span-->
+
+                                </div>
+                                <!--/row-->
+                            
+
+                                <h3 class="form-section">Grupo / Departamento</h3>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label></label>
+                                        
+                                            <div id="tvUsuarioGrupo"></div>
+
                                         </div>
                                     </div>
                                 </div>
-                                <!--/span-->
-
-
-                            </div>
-                            <!--/row-->
-
-
-                            <h3 class="form-section">Grupo / Departamento</h3>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label></label>
-                                        
-                                        <div id="tvUsuarioGrupo"></div>
-
-                                    </div>
-                                </div>
-                            </div>
+                                
+                            }
                         </div>
 
                         <div class="tab-pane fade" id="tabControleAcesso">
