- Alteração no gerenciador de Template de E-mail para exibir as possíveis Tags - Implementado o validador de Nível de Segurança da Senha. - Implementada sugestão de login (via proc) para novos usuários. - Validação de existência do e-mail informado na criação da conta do usuário.

--- a/Fontes/BackofficeCMS/BackofficeCMS/Views/EmailTemplate/CadEmailTemplate.cshtml
+++ b/Fontes/BackofficeCMS/BackofficeCMS/Views/EmailTemplate/CadEmailTemplate.cshtml
@@ -109,7 +109,16 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label class="control-label">Corpo</label>
-                                        
+                                 
+                                        <div class="alert alert-warning">
+                                            Lista de tags especiais utilizadas para mesclar nas mensagens enviadas pelo sistema.<br />
+                                            <b><%Nome%></b> - Nome do usuário<br />
+                                            <b><%Link_MinhaConta%></b> - Linha para acessar a conta do usuário<br />
+                                            <b><%Link_LembrarSenha%></b> - Linhk para realizar a troca de senha<br />
+                                            <b><%Login_WebFull%></b> - Login de acesso ao sistema WebFull<br />
+                                            <b><%Email_WebFull%></b> - E-mail usado como atutenticação no sistema WebFull
+                                        </div>
+                                               
                                         @*<textarea id="Corpo" name="Corpo" rows="5" class="form-control" style="resize: none;"></textarea>*@
 
                                         <input type="hidden" id="EmailTemplateCorpo" name="EmailTemplateCorpo" />
