--- a/Fontes/BackofficeCMS/BackofficeCMS/Views/EmailTemplate/CadEmailTemplate.cshtml
+++ b/Fontes/BackofficeCMS/BackofficeCMS/Views/EmailTemplate/CadEmailTemplate.cshtml
@@ -116,7 +116,8 @@
                                             <b><%Link_MinhaConta%></b> - Linha para acessar a conta do usuário<br />
                                             <b><%Link_LembrarSenha%></b> - Linhk para realizar a troca de senha<br />
                                             <b><%Login_WebFull%></b> - Login de acesso ao sistema WebFull<br />
-                                            <b><%Email_WebFull%></b> - E-mail usado como atutenticação no sistema WebFull
+                                            <b><%Email_WebFull%></b> - E-mail usado como atutenticação no sistema WebFull<br />
+                                            <b><%Login_Portal%></b> - Login de acesso ao portal<br />
                                         </div>
                                                
                                         @*<textarea id="Corpo" name="Corpo" rows="5" class="form-control" style="resize: none;"></textarea>*@
