--- a/Fontes/SitePortal/SitePortal/SitePortal/Views/Conteudo/Calculadora2017.cshtml
+++ b/Fontes/SitePortal/SitePortal/SitePortal/Views/Conteudo/Calculadora2017.cshtml
@@ -181,7 +181,7 @@
                     <div style="text-align: center; float: left; padding: 2px 0; border-bottom: 1px dotted gray; font-weight: bold; "><div style="width: 247px; text-align: left; float: left; padding-left: 6px;">Total</div><div style="width: 113px; text-align: left; float: left;"><span id="lblRequerenteTotal2"></span></div><div style="width: 113px; text-align: left; float: left;"><span id="lblRequeridoTotal2"></span></div></div>
                 </div>
             </div>
-            <br /><a href="#" onclick="window.open('http://ccbc.org.br/Conteudo/Segregacao', 'Calculadora 2017', 'STATUS=NO, TOOLBAR=NO, LOCATION=NO, DIRECTORIES=NO, RESISABLE=NO, SCROLLBARS=YES, TOP=10, LEFT=10, WIDTH=504, HEIGHT=270'); return false;" style="font-size: 12px; font-family: arial; text-decoration: none; float: left; width: 470px; margin-top: 5px; margin-left: 7px;">Segregação</a>
+            <br /><a href="#" onclick="window.open('http://ccbc.org.br/Conteudo/Segregacao', 'Calculadora 2017', 'STATUS=NO, TOOLBAR=NO, LOCATION=NO, DIRECTORIES=NO, RESISABLE=NO, SCROLLBARS=YES, TOP=10, LEFT=10, WIDTH=504, HEIGHT=270'); return false;" style="font-size: 12px; font-family: arial; text-decoration: none; float: left; width: 470px; margin-top: 5px; margin-left: 7px;">Importante! Clique aqui para cálculo em caso de SEGREGAÇÃO.</a>
         </div>
 
 
